// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SongTitle Component > should match the snapshot 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="mb-2 text-2xl font-bold leading-8 text-steel-blue-700"
    >
      Test Song Title
    </h2>
    <p
      class="mb-4 text-steel-blue-700"
    >
      Test Artist Name
    </p>
  </div>
</DocumentFragment>
`;

exports[`SongTitle Component > should render with different title and artist 1`] = `
<DocumentFragment>
  <div>
    <h2
      class="mb-2 text-2xl font-bold leading-8 text-steel-blue-700"
    >
      Another Song Title
    </h2>
    <p
      class="mb-4 text-steel-blue-700"
    >
      Another Artist Name
    </p>
  </div>
</DocumentFragment>
`;

exports[`SongTitle Component should match the snapshot 1`] = `
<div>
  <h2
    class="mb-2 text-2xl font-bold leading-8 text-steel-blue-700"
  >
    Test Song Title
  </h2>
  <p
    class="mb-4 text-steel-blue-700"
  >
    Test Artist Name
  </p>
</div>
`;
